# rust-rl

./: .dockerignore  .gitignore  CLAUDE.md  DYNAMIC_SERVER_USAGE.md  Dockerfile  MULTI_MODEL_EVAL_README.md  README.md  blog-example.py  docker-compose.yml  eval.py  eval_config.py  evaluate_script.py  inference.py  main.py  multi_model_eval.py  multi_model_eval_client.py  multi_model_eval_config.yaml  process_data.py  pyproject.toml  run_evaluation.py  start_inference_server.py  start_marimo.sh  start_vllm_server.py  test_config.yaml  train.py  train_script.py  verify_structure.py  viz.py  vllm_model_server.py
oxen_utils/: __init__.py  experiment.py
reward_functions/: __init__.py  functions.py  utils.py
scripts/: README.md  evaluate_model.sh  evaluate_qwen_1_5b.sh  evaluate_qwen_4b.sh  resume_training.sh  train_1_5b.sh  train_4b.sh
src/rust_rl/: __init__.py
src/rust_rl/common/: __init__.py  utils.py
src/rust_rl/dataset/: __init__.py  dataset.py
src/rust_rl/evaluation/: __init__.py  config.py  dynamic_model_server.py  eval_runner.py  evaluator.py  inference_runner.py  multi_model_visualize.py  orchestration.py  status_server.py  visualize.py
src/rust_rl/experiment_utils/: __init__.py  callbacks.py  experiment.py
src/rust_rl/models/: __init__.py  api_models.py  base.py  hf_models.py  vllm_models.py
src/rust_rl/oxen_utils/: __init__.py  callbacks.py  experiment.py
src/rust_rl/prompts/: __init__.py  system_prompts.py
src/rust_rl/reward_functions/: __init__.py  utils.py  wrapper.py
