[project]
name = "rust-rl"
version = "0.1.0"
description = "Reinforcement Learning for Generating Better Rust Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "datasets>=3.6.0",
    "jupyterlab>=4.4.2",
    "marimo>=0.13.9",
    "matplotlib>=3.10.3",
    "oxenai>=0.34.2",
    "peft>=0.15.2",
    "polars>=1.29.0",
    "protobuf>=6.30.2",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.9",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "trl>=0.17.0",
    "unsloth>=2024.8",
    "wandb>=0.19.11",
]

[build-system]
requires = ["setuptools>=68.2.0", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "basedpyright",
]

[tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "D", "W"]
ignore = ["F", "D100", "D101", "D102", "D103", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingImports = false

